超出顯示範圍時滑鼠移置上方顯示完整內容

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               v-model="item.matterContent"
               @click="clickContent"
               @blur="blurContent"
+              @mouseover="mouseoverContent"
             />
             <button class="delete"><i class="far fa-trash-alt"></i></button>
           </div>
